accelerated-domains: add geline.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33822,6 +33822,7 @@ server=/geizan.cc/114.114.114.114
 server=/gelaha.com/114.114.114.114
 server=/gelicang.net/114.114.114.114
 server=/gelics.com/114.114.114.114
+server=/geline.net/114.114.114.114
 server=/gelinya.com/114.114.114.114
 server=/geliqi.net/114.114.114.114
 server=/gelonghui.com/114.114.114.114
