accelerated-domains: add gflad.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34011,6 +34011,7 @@ server=/gffwq.com/114.114.114.114
 server=/gfglb.com/114.114.114.114
 server=/gfhealthcare.com/114.114.114.114
 server=/gfjl.org/114.114.114.114
+server=/gflad.com/114.114.114.114
 server=/gflt.net/114.114.114.114
 server=/gflz.com/114.114.114.114
 server=/gfmpv.com/114.114.114.114
