accelerated-domains: add gzzhixin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38937,6 +38937,7 @@ server=/gzzc-logistics.com/114.114.114.114
 server=/gzzdkg.com/114.114.114.114
 server=/gzzhanmei.com/114.114.114.114
 server=/gzzhitu.com/114.114.114.114
+server=/gzzhixin.com/114.114.114.114
 server=/gzzhrong.com/114.114.114.114
 server=/gzziri.com/114.114.114.114
 server=/gzzkjc.net/114.114.114.114
