--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56986,6 +56986,7 @@ server=/longdezhu.com/114.114.114.114
 server=/longdian.com/114.114.114.114
 server=/longduwang.com/114.114.114.114
 server=/longease.net/114.114.114.114
+server=/longfanshipping.com/114.114.114.114
 server=/longfengmarathon.com/114.114.114.114
 server=/longfor.com/114.114.114.114
 server=/longfu360.com/114.114.114.114
