--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77759,6 +77759,7 @@ server=/spush.com/114.114.114.114
 server=/spvtime.com/114.114.114.114
 server=/spwj.com/114.114.114.114
 server=/spyouxi.com/114.114.114.114
+server=/spzp.com/114.114.114.114
 server=/spzs.com/114.114.114.114
 server=/spzyjy.com/114.114.114.114
 server=/sq-ks.com/114.114.114.114
