--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78029,6 +78029,7 @@ server=/staofchina.com/114.114.114.114
 server=/star-engine.com/114.114.114.114
 server=/star-kid.com/114.114.114.114
 server=/star-new-material.com/114.114.114.114
+server=/star-river.com/114.114.114.114
 server=/star1024.com/114.114.114.114
 server=/star365.com/114.114.114.114
 server=/star7game.com/114.114.114.114
