--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78086,6 +78086,7 @@ server=/startos.org/114.114.114.114
 server=/startup-partner.com/114.114.114.114
 server=/starwarschina.com/114.114.114.114
 server=/starway.net/114.114.114.114
+server=/starwaycomm.com/114.114.114.114
 server=/starworldgames.com/114.114.114.114
 server=/starwsn.com/114.114.114.114
 server=/starxiiient.com/114.114.114.114
