accelerated-domains: add szfglass.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79496,6 +79496,7 @@ server=/szfcol.com/114.114.114.114
 server=/szfengtu88.com/114.114.114.114
 server=/szffmr.com/114.114.114.114
 server=/szfg.net/114.114.114.114
+server=/szfglass.com/114.114.114.114
 server=/szfinee.com/114.114.114.114
 server=/szfirstplastic.com/114.114.114.114
 server=/szfiu.com/114.114.114.114
