accelerated-domains: add visfarm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85363,6 +85363,7 @@ server=/visaun.com/114.114.114.114
 server=/visbodyfit.com/114.114.114.114
 server=/viscosefibre.com/114.114.114.114
 server=/viseator.com/114.114.114.114
+server=/visfarm.com/114.114.114.114
 server=/vishavideo.com/114.114.114.114
 server=/visheng.com/114.114.114.114
 server=/vishoor.com/114.114.114.114
