accelerated-domains: add honsea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42571,6 +42571,7 @@ server=/honor.com/114.114.114.114
 server=/honorfair.com/114.114.114.114
 server=/honorfile.com/114.114.114.114
 server=/honpery.com/114.114.114.114
+server=/honsea.com/114.114.114.114
 server=/honson-china.com/114.114.114.114
 server=/honsonch.com/114.114.114.114
 server=/honstarmemory.com/114.114.114.114
