accelerated-domains: add cellcook.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18586,6 +18586,7 @@ server=/celiang.net/114.114.114.114
 server=/celinlawyers.com/114.114.114.114
 server=/celiss.com/114.114.114.114
 server=/cell-gene.com/114.114.114.114
+server=/cellcook.com/114.114.114.114
 server=/cellixsoft.com/114.114.114.114
 server=/cellocation.com/114.114.114.114
 server=/cellprobio.com/114.114.114.114
