accelerated-domains: add gzpgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38778,6 +38778,7 @@ server=/gzpeiyou.com/114.114.114.114
 server=/gzpfs.com/114.114.114.114
 server=/gzpg.net/114.114.114.114
 server=/gzpggy.com/114.114.114.114
+server=/gzpgroup.com/114.114.114.114
 server=/gzph.net/114.114.114.114
 server=/gzpinda.com/114.114.114.114
 server=/gzpma.com/114.114.114.114
