--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38783,6 +38783,7 @@ server=/gzph.net/114.114.114.114
 server=/gzpinda.com/114.114.114.114
 server=/gzpma.com/114.114.114.114
 server=/gzpoint.com/114.114.114.114
+server=/gzpotent.com/114.114.114.114
 server=/gzprobig.com/114.114.114.114
 server=/gzpts.com/114.114.114.114
 server=/gzpy120.net/114.114.114.114
