--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97655,6 +97655,7 @@ server=/yuexinli.com/114.114.114.114
 server=/yuexirc.com/114.114.114.114
 server=/yuexiu-finance.com/114.114.114.114
 server=/yuexiu.com/114.114.114.114
+server=/yuexiufoods.com/114.114.114.114
 server=/yuexunedu.com/114.114.114.114
 server=/yuexunfanyi.com/114.114.114.114
 server=/yuexw.com/114.114.114.114
