accelerated-domains: add zgnwp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99446,6 +99446,7 @@ server=/zgnnwdkj.com/114.114.114.114
 server=/zgnt.cc/114.114.114.114
 server=/zgnt.net/114.114.114.114
 server=/zgnuan.com/114.114.114.114
+server=/zgnwp.com/114.114.114.114
 server=/zgny.com/114.114.114.114
 server=/zgnyw.net/114.114.114.114
 server=/zgoa.net/114.114.114.114
