accelerated-domains: add zomsky.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101856,6 +101856,7 @@ server=/zolsky.com/114.114.114.114
 server=/zomanbio.com/114.114.114.114
 server=/zombiescat.com/114.114.114.114
 server=/zomiu.com/114.114.114.114
+server=/zomsky.com/114.114.114.114
 server=/zon100.com/114.114.114.114
 server=/zonafs.com/114.114.114.114
 server=/zonboapp.com/114.114.114.114
