--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13083,6 +13083,7 @@ server=/baiyuandian.cc/114.114.114.114
 server=/baiyuemi.com/114.114.114.114
 server=/baiyumedia.com/114.114.114.114
 server=/baiyunairport.com/114.114.114.114
+server=/baiyunholding.com/114.114.114.114
 server=/baiyunhuojia.com/114.114.114.114
 server=/baiyunmh.com/114.114.114.114
 server=/baiyunpiaopiao.com/114.114.114.114
