accelerated-domains: add gztxcw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38861,6 +38861,7 @@ server=/gzttjt.com/114.114.114.114
 server=/gztv.com/114.114.114.114
 server=/gztvu.com/114.114.114.114
 server=/gztwkadokawa.com/114.114.114.114
+server=/gztxcw.com/114.114.114.114
 server=/gztxedu.com/114.114.114.114
 server=/gztyre.com/114.114.114.114
 server=/gztyyedu.com/114.114.114.114
