--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43698,6 +43698,7 @@ server=/huayuan-print.com/114.114.114.114
 server=/huayuanlcd.com/114.114.114.114
 server=/huayuchaxiang.com/114.114.114.114
 server=/huayue119.com/114.114.114.114
+server=/huayueivf.com/114.114.114.114
 server=/huayuejob.com/114.114.114.114
 server=/huayufilter.com/114.114.114.114
 server=/huayulandmarkhotel.com/114.114.114.114
