--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38599,6 +38599,7 @@ server=/gzcl999.com/114.114.114.114
 server=/gzcmer.com/114.114.114.114
 server=/gzcn.net/114.114.114.114
 server=/gzcppa.com/114.114.114.114
+server=/gzcrdzbk.com/114.114.114.114
 server=/gzcsgs.com/114.114.114.114
 server=/gzcxhd.com/114.114.114.114
 server=/gzcycling.com/114.114.114.114
