--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39046,6 +39046,7 @@ server=/h6ru.net/114.114.114.114
 server=/h7ec.com/114.114.114.114
 server=/h99998888.com/114.114.114.114
 server=/h99999999.com/114.114.114.114
+server=/ha47.net/114.114.114.114
 server=/ha97.com/114.114.114.114
 server=/haawking.com/114.114.114.114
 server=/habadog.com/114.114.114.114
