--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43087,6 +43087,7 @@ server=/hsutimes.com/114.114.114.114
 server=/hsuyeung.com/114.114.114.114
 server=/hswatersupply.com/114.114.114.114
 server=/hsweb.me/114.114.114.114
+server=/hswell.com/114.114.114.114
 server=/hswkzy.com/114.114.114.114
 server=/hswmb.com/114.114.114.114
 server=/hswyvz.com/114.114.114.114
