accelerated-domains: add kingray-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52880,6 +52880,7 @@ server=/kingnettech.com/114.114.114.114
 server=/kingoit.com/114.114.114.114
 server=/kingpower-cn.com/114.114.114.114
 server=/kingque.com/114.114.114.114
+server=/kingray-tech.com/114.114.114.114
 server=/kingreader.com/114.114.114.114
 server=/kingrein.com/114.114.114.114
 server=/kingroot.net/114.114.114.114
