accelerated-domains: add timenetwork.tech

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81691,6 +81691,7 @@ server=/timedoo.com/114.114.114.114
 server=/timelate.com/114.114.114.114
 server=/timelessq.com/114.114.114.114
 server=/timemachine.icu/114.114.114.114
+server=/timenetwork.tech/114.114.114.114
 server=/timeofdate.com/114.114.114.114
 server=/timeoutbeijing.com/114.114.114.114
 server=/timeoutcn.com/114.114.114.114
