accelerated-domains: add kubercloud.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53773,6 +53773,7 @@ server=/kuashou.com/114.114.114.114
 server=/kuashuonk.com/114.114.114.114
 server=/kubady2.com/114.114.114.114
 server=/kubenyizhan.com/114.114.114.114
+server=/kubercloud.com/114.114.114.114
 server=/kubey.cc/114.114.114.114
 server=/kubikeji.com/114.114.114.114
 server=/kuboluo.com/114.114.114.114
