--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19538,6 +19538,7 @@ server=/chilunyc.com/114.114.114.114
 server=/chiluyingxiao.com/114.114.114.114
 server=/chilwee.com/114.114.114.114
 server=/chimatong.com/114.114.114.114
+server=/chimbusco.com/114.114.114.114
 server=/chimelong.com/114.114.114.114
 server=/chimezi.com/114.114.114.114
 server=/chimoph.com/114.114.114.114
