accelerated-domains: add nrmtc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64613,6 +64613,7 @@ server=/nresm.com/114.114.114.114
 server=/nri-beijing.com/114.114.114.114
 server=/nrisc.com/114.114.114.114
 server=/nrmchina.com/114.114.114.114
+server=/nrmtc.com/114.114.114.114
 server=/nrnr.cc/114.114.114.114
 server=/nrsfh.com/114.114.114.114
 server=/nrsg.net/114.114.114.114
