--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19656,6 +19656,7 @@ server=/china-mt.org/114.114.114.114
 server=/china-nengyuan.com/114.114.114.114
 server=/china-nlp.com/114.114.114.114
 server=/china-nns.com/114.114.114.114
+server=/china-nsftz.com/114.114.114.114
 server=/china-obgyn.net/114.114.114.114
 server=/china-office-solutions.com/114.114.114.114
 server=/china-orientgroup.com/114.114.114.114
