accelerated-domains: add gmeri.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34763,6 +34763,7 @@ server=/gmedata.com/114.114.114.114
 server=/gmeditech.com/114.114.114.114
 server=/gmedtech.com/114.114.114.114
 server=/gmem.cc/114.114.114.114
+server=/gmeri.com/114.114.114.114
 server=/gmfc.cc/114.114.114.114
 server=/gmfintl.com/114.114.114.114
 server=/gmgc.info/114.114.114.114
