--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39497,6 +39497,7 @@ server=/hanmara.com/114.114.114.114
 server=/hanmeilin.com/114.114.114.114
 server=/hanming.cc/114.114.114.114
 server=/hanmozhai.com/114.114.114.114
+server=/hanniulaser.com/114.114.114.114
 server=/hannor.com/114.114.114.114
 server=/hannto.com/114.114.114.114
 server=/hanpian.tv/114.114.114.114
