--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82749,6 +82749,7 @@ server=/trendingstar.tech/114.114.114.114
 server=/trendsbulletin.com/114.114.114.114
 server=/trendsmen.com/114.114.114.114
 server=/trendtokyo.com/114.114.114.114
+server=/trenrde.com/114.114.114.114
 server=/tretars.com/114.114.114.114
 server=/trexiu.com/114.114.114.114
 server=/trfgvb.com/114.114.114.114
