--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95587,6 +95587,7 @@ server=/yingpaigame.com/114.114.114.114
 server=/yingpengbz.com/114.114.114.114
 server=/yingpost.com/114.114.114.114
 server=/yingriliuti.com/114.114.114.114
+server=/yingrongit.com/114.114.114.114
 server=/yingshe.com/114.114.114.114
 server=/yingsheng.com/114.114.114.114
 server=/yingshevip.com/114.114.114.114
