--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17678,6 +17678,7 @@ server=/catfish-cms.com/114.114.114.114
 server=/catguo.com/114.114.114.114
 server=/cathassist.org/114.114.114.114
 server=/cathayagroup.com/114.114.114.114
+server=/caticgz.com/114.114.114.114
 server=/caticol.com/114.114.114.114
 server=/catjc.com/114.114.114.114
 server=/catl.com/114.114.114.114
