--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33544,6 +33544,7 @@ server=/gdgudong.com/114.114.114.114
 server=/gdguozhi.com/114.114.114.114
 server=/gdgwyw.com/114.114.114.114
 server=/gdgzhengzhou.com/114.114.114.114
+server=/gdgzrb.com/114.114.114.114
 server=/gdhaoma.com/114.114.114.114
 server=/gdhbsh.com/114.114.114.114
 server=/gdhcsh.com/114.114.114.114
