--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38792,6 +38792,7 @@ server=/gzpinda.com/114.114.114.114
 server=/gzpma.com/114.114.114.114
 server=/gzpoint.com/114.114.114.114
 server=/gzpotent.com/114.114.114.114
+server=/gzprg.com/114.114.114.114
 server=/gzprobig.com/114.114.114.114
 server=/gzpts.com/114.114.114.114
 server=/gzpy120.net/114.114.114.114
