--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82605,6 +82605,7 @@ server=/toyoutesting.com/114.114.114.114
 server=/toysir.com/114.114.114.114
 server=/toysol.com/114.114.114.114
 server=/tozzger.info/114.114.114.114
+server=/tp-data.com/114.114.114.114
 server=/tp82.com/114.114.114.114
 server=/tpadx.com/114.114.114.114
 server=/tpbankvn.com/114.114.114.114
