--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97679,6 +97679,7 @@ server=/yuexirc.com/114.114.114.114
 server=/yuexiu-finance.com/114.114.114.114
 server=/yuexiu.com/114.114.114.114
 server=/yuexiufoods.com/114.114.114.114
+server=/yuexiuproperty.com/114.114.114.114
 server=/yuexunedu.com/114.114.114.114
 server=/yuexunfanyi.com/114.114.114.114
 server=/yuexw.com/114.114.114.114
