--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57056,6 +57056,7 @@ server=/longsheng988.com/114.114.114.114
 server=/longshine.com/114.114.114.114
 server=/longsok.com/114.114.114.114
 server=/longsto.com/114.114.114.114
+server=/longstonechina.com/114.114.114.114
 server=/longsunhd.com/114.114.114.114
 server=/longsys.com/114.114.114.114
 server=/longtaifoods.com/114.114.114.114
