accelerated-domains: add focobio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31956,6 +31956,7 @@ server=/focalbrand.com/114.114.114.114
 server=/focalhot.com/114.114.114.114
 server=/focc.cc/114.114.114.114
 server=/fochot.com/114.114.114.114
+server=/focobio.com/114.114.114.114
 server=/focofish.com/114.114.114.114
 server=/focus-efc.com/114.114.114.114
 server=/focus-eloan.com/114.114.114.114
