accelerated-domains: add gzredpine.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38808,6 +38808,7 @@ server=/gzrand.com/114.114.114.114
 server=/gzrch.com/114.114.114.114
 server=/gzrcqf.com/114.114.114.114
 server=/gzrecruit.com/114.114.114.114
+server=/gzredpine.com/114.114.114.114
 server=/gzrexin.com/114.114.114.114
 server=/gzrishun.com/114.114.114.114
 server=/gzrkt.com/114.114.114.114
