accelerated-domains: add gzyycg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38945,6 +38945,7 @@ server=/gzysnkyy.com/114.114.114.114
 server=/gzyucai.com/114.114.114.114
 server=/gzyxls.com/114.114.114.114
 server=/gzyxtech.com/114.114.114.114
+server=/gzyycg.com/114.114.114.114
 server=/gzyyjt.net/114.114.114.114
 server=/gzyyma.com/114.114.114.114
 server=/gzyz699.com/114.114.114.114
