--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47612,6 +47612,7 @@ server=/iwanshang8.asia/114.114.114.114
 server=/iwanws.com/114.114.114.114
 server=/iwanyl.com/114.114.114.114
 server=/iwapan.com/114.114.114.114
+server=/iwatani-gz.com/114.114.114.114
 server=/iwatch365.com/114.114.114.114
 server=/iway-tech.com/114.114.114.114
 server=/iwc999.com/114.114.114.114
