accelerated-domains: add wuyangmotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89395,6 +89395,7 @@ server=/wuxzx.com/114.114.114.114
 server=/wuyanauto.com/114.114.114.114
 server=/wuyang-honda.com/114.114.114.114
 server=/wuyangkeji.com/114.114.114.114
+server=/wuyangmotor.com/114.114.114.114
 server=/wuyangplatform.com/114.114.114.114
 server=/wuyantonglun.org/114.114.114.114
 server=/wuyazi.com/114.114.114.114
