--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9980,6 +9980,7 @@ server=/aiduoka.com/114.114.114.114
 server=/aidusk.com/114.114.114.114
 server=/aidusk.org/114.114.114.114
 server=/aiduwenxue.com/114.114.114.114
+server=/aidynamic.com/114.114.114.114
 server=/aiec-alliance.com/114.114.114.114
 server=/aieco.org/114.114.114.114
 server=/aiecoms.com/114.114.114.114
