accelerated-domains: add chemicalreagent.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19271,6 +19271,7 @@ server=/chemdodgen.com/114.114.114.114
 server=/chemdrug.com/114.114.114.114
 server=/chemgogo.com/114.114.114.114
 server=/chemicalbook.com/114.114.114.114
+server=/chemicalreagent.com/114.114.114.114
 server=/chemingpian.com/114.114.114.114
 server=/chemm.com/114.114.114.114
 server=/chemmade.com/114.114.114.114
