accelerated-domains: add fulengen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32530,6 +32530,7 @@ server=/fuke163.com/114.114.114.114
 server=/fukexie.com/114.114.114.114
 server=/fulanka.com/114.114.114.114
 server=/fulantv.com/114.114.114.114
+server=/fulengen.com/114.114.114.114
 server=/fuliansheng.com/114.114.114.114
 server=/fuliao.com/114.114.114.114
 server=/fuliba.com/114.114.114.114
