--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38548,6 +38548,7 @@ server=/gz-gree.com/114.114.114.114
 server=/gz-haoxiang.com/114.114.114.114
 server=/gz-hipower.com/114.114.114.114
 server=/gz-huayuan.com/114.114.114.114
+server=/gz-julong.com/114.114.114.114
 server=/gz-junan.com/114.114.114.114
 server=/gz-lodihair.com/114.114.114.114
 server=/gz-notary.com/114.114.114.114
