--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38766,6 +38766,7 @@ server=/gzmediaclick.com/114.114.114.114
 server=/gzmedri.com/114.114.114.114
 server=/gzmeichang.com/114.114.114.114
 server=/gzmiden.com/114.114.114.114
+server=/gzminjia.com/114.114.114.114
 server=/gzmiyuan.com/114.114.114.114
 server=/gzmjhzs.com/114.114.114.114
 server=/gzmlfcyy.com/114.114.114.114
