--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51470,6 +51470,7 @@ server=/juxizhineng.com/114.114.114.114
 server=/juxuan.net/114.114.114.114
 server=/juxuecms.com/114.114.114.114
 server=/juyanbao.com/114.114.114.114
+server=/juyang-chem.com/114.114.114.114
 server=/juyanwenjuan.com/114.114.114.114
 server=/juyebwg.com/114.114.114.114
 server=/juyingele.com/114.114.114.114
