accelerated-domains: add lihangzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55893,6 +55893,7 @@ server=/liguangtaogroup.com/114.114.114.114
 server=/liguhd.com/114.114.114.114
 server=/liguosong.com/114.114.114.114
 server=/lihang-expo.com/114.114.114.114
+server=/lihangzx.com/114.114.114.114
 server=/lihaoshuyuan.com/114.114.114.114
 server=/liheng1688.com/114.114.114.114
 server=/lihetong.com/114.114.114.114
