--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31516,6 +31516,7 @@ server=/finebey.com/114.114.114.114
 server=/finebi.com/114.114.114.114
 server=/fineforming.com/114.114.114.114
 server=/fineidc.com/114.114.114.114
+server=/fineimmu.com/114.114.114.114
 server=/finelybook.com/114.114.114.114
 server=/finer2.com/114.114.114.114
 server=/finereport.com/114.114.114.114
