accelerated-domains: add greatoo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35379,6 +35379,7 @@ server=/greatbit.com/114.114.114.114
 server=/greatesting.com/114.114.114.114
 server=/greathink.com/114.114.114.114
 server=/greatld.com/114.114.114.114
+server=/greatoo.com/114.114.114.114
 server=/greatopensource.com/114.114.114.114
 server=/greatops.net/114.114.114.114
 server=/greatpowercn.com/114.114.114.114
