accelerated-domains: add gzrrj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38822,6 +38822,7 @@ server=/gzrkt.com/114.114.114.114
 server=/gzrobot.com/114.114.114.114
 server=/gzrobots.com/114.114.114.114
 server=/gzrqhyxh.com/114.114.114.114
+server=/gzrrj.com/114.114.114.114
 server=/gzrtnet.com/114.114.114.114
 server=/gzrycl.com/114.114.114.114
 server=/gzschknyy.com/114.114.114.114
