--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38657,6 +38657,7 @@ server=/gzgcsmart.com/114.114.114.114
 server=/gzgdkq.com/114.114.114.114
 server=/gzgdwl.com/114.114.114.114
 server=/gzgjcm.com/114.114.114.114
+server=/gzglgcjt.com/114.114.114.114
 server=/gzgljx.com/114.114.114.114
 server=/gzgmjcx.com/114.114.114.114
 server=/gzgreatsun.com/114.114.114.114
