accelerated-domains: add gzjlwy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38718,6 +38718,7 @@ server=/gzjkfk.com/114.114.114.114
 server=/gzjkfund.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
 server=/gzjkyljt.com/114.114.114.114
+server=/gzjlwy.com/114.114.114.114
 server=/gzjob.net/114.114.114.114
 server=/gzjpad.com/114.114.114.114
 server=/gzjqd.com/114.114.114.114
