--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69245,6 +69245,7 @@ server=/qingmh.com/114.114.114.114
 server=/qingmo.com/114.114.114.114
 server=/qingmob.com/114.114.114.114
 server=/qingmuit.com/114.114.114.114
+server=/qingmutec.com/114.114.114.114
 server=/qingmuxinli.com/114.114.114.114
 server=/qingnianlvxing.com/114.114.114.114
 server=/qingnianwang.com/114.114.114.114
