accelerated-domains: add ximmerse.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91482,6 +91482,7 @@ server=/ximgs.net/114.114.114.114
 server=/ximiplay.com/114.114.114.114
 server=/ximitools.com/114.114.114.114
 server=/ximiyouxi.com/114.114.114.114
+server=/ximmerse.com/114.114.114.114
 server=/ximuw.com/114.114.114.114
 server=/xin-manganese.com/114.114.114.114
 server=/xin-yao.com/114.114.114.114
