accelerated-domains: add gnict.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34829,6 +34829,7 @@ server=/gnetis.com/114.114.114.114
 server=/gng92.com/114.114.114.114
 server=/gnhpc.com/114.114.114.114
 server=/gnice-it.com/114.114.114.114
+server=/gnict.com/114.114.114.114
 server=/gninstruments.com/114.114.114.114
 server=/gnitif.com/114.114.114.114
 server=/gnlearn.com/114.114.114.114
