accelerated-domains: add gzyilongprinting.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38944,6 +38944,7 @@ server=/gzydong.com/114.114.114.114
 server=/gzydwh.com/114.114.114.114
 server=/gzyflw.com/114.114.114.114
 server=/gzyhg.vip/114.114.114.114
+server=/gzyilongprinting.com/114.114.114.114
 server=/gzyitsy.com/114.114.114.114
 server=/gzylhyzx.com/114.114.114.114
 server=/gzyocg.com/114.114.114.114
