--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76372,6 +76372,7 @@ server=/sinocare.com/114.114.114.114
 server=/sinocars.com/114.114.114.114
 server=/sinocateringexpo.com/114.114.114.114
 server=/sinocax.com/114.114.114.114
+server=/sinochem-guangdong.com/114.114.114.114
 server=/sinochem.com/114.114.114.114
 server=/sinochemb2c.com/114.114.114.114
 server=/sinochemehc.com/114.114.114.114
