--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3327,6 +3327,7 @@ server=/333ck.com/114.114.114.114
 server=/333cn.com/114.114.114.114
 server=/333com85.app/114.114.114.114
 server=/333com89.app/114.114.114.114
+server=/333f.com/114.114.114.114
 server=/333iy.com/114.114.114.114
 server=/333job.com/114.114.114.114
 server=/333ku.com/114.114.114.114
