accelerated-domains: add gzzfrl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38965,6 +38965,7 @@ server=/gzyz699.com/114.114.114.114
 server=/gzzarts.com/114.114.114.114
 server=/gzzc-logistics.com/114.114.114.114
 server=/gzzdkg.com/114.114.114.114
+server=/gzzfrl.com/114.114.114.114
 server=/gzzhanmei.com/114.114.114.114
 server=/gzzhitu.com/114.114.114.114
 server=/gzzhixin.com/114.114.114.114
