accelerated-domains: add jujinpcb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51250,6 +51250,7 @@ server=/jujiaozs.com/114.114.114.114
 server=/jujias.com/114.114.114.114
 server=/jujienet.com/114.114.114.114
 server=/jujin8.com/114.114.114.114
+server=/jujinpcb.com/114.114.114.114
 server=/jujinwater.com/114.114.114.114
 server=/jujiu8.com/114.114.114.114
 server=/jujoy.com/114.114.114.114
