--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64694,6 +64694,7 @@ server=/nsrjlb.com/114.114.114.114
 server=/nsseii.com/114.114.114.114
 server=/nsshare.com/114.114.114.114
 server=/nsstream.com/114.114.114.114
+server=/nstfhg.com/114.114.114.114
 server=/nsw58.com/114.114.114.114
 server=/nsw88.com/114.114.114.114
 server=/nsw99.com/114.114.114.114
