accelerated-domains: add ruizib.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72237,6 +72237,7 @@ server=/ruiyingkeji.com/114.114.114.114
 server=/ruiyuanobserve.com/114.114.114.114
 server=/ruiyunit.com/114.114.114.114
 server=/ruizhipak.com/114.114.114.114
+server=/ruizib.com/114.114.114.114
 server=/ruizim.com/114.114.114.114
 server=/ruizong-gz.com/114.114.114.114
 server=/rujiazg.com/114.114.114.114
