--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99214,6 +99214,7 @@ server=/zedsy.com/114.114.114.114
 server=/zeekrlife.com/114.114.114.114
 server=/zeelis.com/114.114.114.114
 server=/zeesin.com/114.114.114.114
+server=/zeewain.com/114.114.114.114
 server=/zegarkirepliki.pl/114.114.114.114
 server=/zego.im/114.114.114.114
 server=/zeguoren.com/114.114.114.114
