accelerated-domains: add drlai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27571,6 +27571,7 @@ server=/driverzeng.com/114.114.114.114
 server=/drivethelife.com/114.114.114.114
 server=/drjy6688.com/114.114.114.114
 server=/drkjy.com/114.114.114.114
+server=/drlai.com/114.114.114.114
 server=/drli.group/114.114.114.114
 server=/drlmeng.com/114.114.114.114
 server=/drm-x.com/114.114.114.114
