--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38801,6 +38801,7 @@ server=/gzpfs.com/114.114.114.114
 server=/gzpg.net/114.114.114.114
 server=/gzpggy.com/114.114.114.114
 server=/gzpgroup.com/114.114.114.114
+server=/gzpgs.com/114.114.114.114
 server=/gzph.net/114.114.114.114
 server=/gzpinda.com/114.114.114.114
 server=/gzpma.com/114.114.114.114
