--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38934,6 +38934,7 @@ server=/gzxwtjy.com/114.114.114.114
 server=/gzxxm.com/114.114.114.114
 server=/gzxxty168.com/114.114.114.114
 server=/gzxyjtfw.com/114.114.114.114
+server=/gzxyprint.com/114.114.114.114
 server=/gzxzht.com/114.114.114.114
 server=/gzxzjy.com/114.114.114.114
 server=/gzyajs.com/114.114.114.114
