accelerated-domains: add lampbi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54345,6 +54345,7 @@ server=/lameixs.com/114.114.114.114
 server=/lamiu.com/114.114.114.114
 server=/lamost.org/114.114.114.114
 server=/lamoton.com/114.114.114.114
+server=/lampbi.com/114.114.114.114
 server=/lampouomo.com/114.114.114.114
 server=/lamsg.net/114.114.114.114
 server=/lamuba.com/114.114.114.114
