accelerated-domains: add cnatom.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21827,6 +21827,7 @@ server=/cname88.com/114.114.114.114
 server=/cnamegslb.com/114.114.114.114
 server=/cnamexingzuoy.com/114.114.114.114
 server=/cnaomeng.com/114.114.114.114
+server=/cnatom.com/114.114.114.114
 server=/cnats.com/114.114.114.114
 server=/cnautofinance.com/114.114.114.114
 server=/cnautonews.com/114.114.114.114
