accelerated-domains: add ourchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65930,6 +65930,7 @@ server=/ouravr.com/114.114.114.114
 server=/ourbluecity.com/114.114.114.114
 server=/ourcargo.com/114.114.114.114
 server=/ourcdns.com/114.114.114.114
+server=/ourchem.com/114.114.114.114
 server=/ourcm.net/114.114.114.114
 server=/ourdian.com/114.114.114.114
 server=/ourdlbs.com/114.114.114.114
