accelerated-domains: add gzsuic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38857,6 +38857,7 @@ server=/gzssyyy.com/114.114.114.114
 server=/gzstarship.com/114.114.114.114
 server=/gzstv.com/114.114.114.114
 server=/gzstyq.com/114.114.114.114
+server=/gzsuic.com/114.114.114.114
 server=/gzsums.net/114.114.114.114
 server=/gzsunny.com/114.114.114.114
 server=/gzsw168.com/114.114.114.114
