accelerated-domains: add lianzhoupc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55725,6 +55725,7 @@ server=/lianyuannongye.com/114.114.114.114
 server=/lianzhixiu.com/114.114.114.114
 server=/lianzhong.com/114.114.114.114
 server=/lianzhongyun.com/114.114.114.114
+server=/lianzhoupc.com/114.114.114.114
 server=/lianzhuli.com/114.114.114.114
 server=/liao1.com/114.114.114.114
 server=/liao98.com/114.114.114.114
