accelerated-domains: add gzjkjl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38720,6 +38720,7 @@ server=/gzjiunuo.com/114.114.114.114
 server=/gzjk120.com/114.114.114.114
 server=/gzjkfk.com/114.114.114.114
 server=/gzjkfund.com/114.114.114.114
+server=/gzjkjl.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
 server=/gzjkyljt.com/114.114.114.114
 server=/gzjlwy.com/114.114.114.114
