--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78652,6 +78652,7 @@ server=/sunray2000.com/114.114.114.114
 server=/sunresin.net/114.114.114.114
 server=/sunrisedutyfree.com/114.114.114.114
 server=/sunrisenan.com/114.114.114.114
+server=/sunrizetech.com/114.114.114.114
 server=/sunsetcare-mirrortech.com/114.114.114.114
 server=/sunsharer.com/114.114.114.114
 server=/sunshine-power.net/114.114.114.114
