accelerated-domains: add crectgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23413,6 +23413,7 @@ server=/crec4mc.com/114.114.114.114
 server=/crecg-jt.com/114.114.114.114
 server=/crecg.com/114.114.114.114
 server=/crecohe.com/114.114.114.114
+server=/crectgroup.com/114.114.114.114
 server=/crecu.com/114.114.114.114
 server=/cred.com/114.114.114.114
 server=/credibleglass.com/114.114.114.114
