--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38724,6 +38724,7 @@ server=/gzjkfund.com/114.114.114.114
 server=/gzjkjl.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
 server=/gzjkyljt.com/114.114.114.114
+server=/gzjlwl.com/114.114.114.114
 server=/gzjlwy.com/114.114.114.114
 server=/gzjob.net/114.114.114.114
 server=/gzjpad.com/114.114.114.114
