accelerated-domains: add gzrh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38827,6 +38827,7 @@ server=/gzrcqf.com/114.114.114.114
 server=/gzrecruit.com/114.114.114.114
 server=/gzredpine.com/114.114.114.114
 server=/gzrexin.com/114.114.114.114
+server=/gzrh.com/114.114.114.114
 server=/gzrishun.com/114.114.114.114
 server=/gzrkt.com/114.114.114.114
 server=/gzrobot.com/114.114.114.114
