--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38836,6 +38836,7 @@ server=/gzrqhyxh.com/114.114.114.114
 server=/gzrrj.com/114.114.114.114
 server=/gzrtnet.com/114.114.114.114
 server=/gzrycl.com/114.114.114.114
+server=/gzscbio.com/114.114.114.114
 server=/gzschknyy.com/114.114.114.114
 server=/gzsdwrmyy.com/114.114.114.114
 server=/gzselon.com/114.114.114.114
