accelerated-domains: add gzspt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38852,6 +38852,7 @@ server=/gzsj.live/114.114.114.114
 server=/gzsjjs.com/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
 server=/gzslyy.com/114.114.114.114
+server=/gzspt.com/114.114.114.114
 server=/gzsq.com/114.114.114.114
 server=/gzsqkfyy.com/114.114.114.114
 server=/gzsrmyy.com/114.114.114.114
