--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61806,6 +61806,7 @@ server=/mwtee.com/114.114.114.114
 server=/mwtg.vip/114.114.114.114
 server=/mww.so/114.114.114.114
 server=/mwyzhcdn.com/114.114.114.114
+server=/mx-china.net/114.114.114.114
 server=/mx-fm.com/114.114.114.114
 server=/mx-industry.com/114.114.114.114
 server=/mx-xz.com/114.114.114.114
