--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66329,6 +66329,7 @@ server=/panlan.com/114.114.114.114
 server=/panmaiquit.com/114.114.114.114
 server=/panmeme.com/114.114.114.114
 server=/pannacloud.com/114.114.114.114
+server=/panocom.com/114.114.114.114
 server=/panoeade.com/114.114.114.114
 server=/panoramastock.com/114.114.114.114
 server=/panothers.com/114.114.114.114
