accelerated-domains: add stu-lab.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78303,6 +78303,7 @@ server=/stt-bearing.com/114.114.114.114
 server=/sttanso.com/114.114.114.114
 server=/sttcq.com/114.114.114.114
 server=/sttry.com/114.114.114.114
+server=/stu-lab.com/114.114.114.114
 server=/stu-works.com/114.114.114.114
 server=/stubbornhuang.com/114.114.114.114
 server=/studa.net/114.114.114.114
