--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82393,6 +82393,7 @@ server=/tooltt.com/114.114.114.114
 server=/tooming.com/114.114.114.114
 server=/toomoss.com/114.114.114.114
 server=/toon.mobi/114.114.114.114
+server=/toonechem.com/114.114.114.114
 server=/tooopen.com/114.114.114.114
 server=/tooseo.com/114.114.114.114
 server=/tootour.com/114.114.114.114
