--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96331,6 +96331,7 @@ server=/ylzms.com/114.114.114.114
 server=/ylzpay.com/114.114.114.114
 server=/ylzsy.com/114.114.114.114
 server=/ylztwy.com/114.114.114.114
+server=/ylzuche.com/114.114.114.114
 server=/ylzxmryy.com/114.114.114.114
 server=/ylzyhb.com/114.114.114.114
 server=/ylzyjx.com/114.114.114.114
