accelerated-domains: add dataarobotics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24983,6 +24983,7 @@ server=/data5u.com/114.114.114.114
 server=/data86.com/114.114.114.114
 server=/data86.net/114.114.114.114
 server=/data985.com/114.114.114.114
+server=/dataarobotics.com/114.114.114.114
 server=/datacaciques.com/114.114.114.114
 server=/datacanvas.com/114.114.114.114
 server=/datacname.com/114.114.114.114
