accelerated-domains: add gdlswl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33594,6 +33594,7 @@ server=/gdlingjie.net/114.114.114.114
 server=/gdlins.com/114.114.114.114
 server=/gdliontech.com/114.114.114.114
 server=/gdlsgz.com/114.114.114.114
+server=/gdlswl.com/114.114.114.114
 server=/gdmagam.com/114.114.114.114
 server=/gdmain.com/114.114.114.114
 server=/gdmm.com/114.114.114.114
