--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38930,6 +38930,7 @@ server=/gzxdd.com/114.114.114.114
 server=/gzxdf.com/114.114.114.114
 server=/gzxdzlyy.com/114.114.114.114
 server=/gzxf35.com/114.114.114.114
+server=/gzxhcbfx.com/114.114.114.114
 server=/gzxianc.com/114.114.114.114
 server=/gzxict.com/114.114.114.114
 server=/gzxijiu.com/114.114.114.114
