accelerated-domains: add lithomaterial.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56394,6 +56394,7 @@ server=/litecoin.ren/114.114.114.114
 server=/litefeel.com/114.114.114.114
 server=/litemob.net/114.114.114.114
 server=/liteng-industry.com/114.114.114.114
+server=/lithomaterial.com/114.114.114.114
 server=/litian268.com/114.114.114.114
 server=/liticool.club/114.114.114.114
 server=/litilala.site/114.114.114.114
