accelerated-domains: add gzdingjie.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38630,6 +38630,7 @@ server=/gzdbx.com/114.114.114.114
 server=/gzdcsmt.com/114.114.114.114
 server=/gzdensity.com/114.114.114.114
 server=/gzdi.com/114.114.114.114
+server=/gzdingjie.com/114.114.114.114
 server=/gzdingyu.com/114.114.114.114
 server=/gzdingyue.com/114.114.114.114
 server=/gzdingyun.com/114.114.114.114
