accelerated-domains: add candiabiotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17442,6 +17442,7 @@ server=/canasy.com/114.114.114.114
 server=/canbaojin.com/114.114.114.114
 server=/cancda.net/114.114.114.114
 server=/cancer361.com/114.114.114.114
+server=/candiabiotech.com/114.114.114.114
 server=/candou.com/114.114.114.114
 server=/candybook.com/114.114.114.114
 server=/candyhaw.com/114.114.114.114
