accelerated-domains: add gzczjd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38624,6 +38624,7 @@ server=/gzcrdzbk.com/114.114.114.114
 server=/gzcsgs.com/114.114.114.114
 server=/gzcxhd.com/114.114.114.114
 server=/gzcycling.com/114.114.114.114
+server=/gzczjd.com/114.114.114.114
 server=/gzdai.com/114.114.114.114
 server=/gzdaily.com/114.114.114.114
 server=/gzdata.net/114.114.114.114
