accelerated-domains: add gzjxchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38743,6 +38743,7 @@ server=/gzjunbo.net/114.114.114.114
 server=/gzjunyu.com/114.114.114.114
 server=/gzjuqi.com/114.114.114.114
 server=/gzjvcom.com/114.114.114.114
+server=/gzjxchem.com/114.114.114.114
 server=/gzjykj.com/114.114.114.114
 server=/gzjyme.com/114.114.114.114
 server=/gzjyypt.com/114.114.114.114
