accelerated-domains: add hisaka-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41624,6 +41624,7 @@ server=/hirtk.com/114.114.114.114
 server=/hirunsport.com/114.114.114.114
 server=/his.sh/114.114.114.114
 server=/his2nd.life/114.114.114.114
+server=/hisaka-china.com/114.114.114.114
 server=/hisavana.com/114.114.114.114
 server=/hiscene.com/114.114.114.114
 server=/hisdnoc.com/114.114.114.114
