--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17486,6 +17486,7 @@ server=/cansee.net/114.114.114.114
 server=/cansine.com/114.114.114.114
 server=/cantoge.com/114.114.114.114
 server=/cantonbio.com/114.114.114.114
+server=/cantonfairad.com/114.114.114.114
 server=/cantontower.com/114.114.114.114
 server=/canvcan.com/114.114.114.114
 server=/canway.net/114.114.114.114
