--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52096,6 +52096,7 @@ server=/kaijieunion.com/114.114.114.114
 server=/kaikeba.com/114.114.114.114
 server=/kailang17.com/114.114.114.114
 server=/kailing.pub/114.114.114.114
+server=/kailitech.com/114.114.114.114
 server=/kaimanhua.com/114.114.114.114
 server=/kaimen360.com/114.114.114.114
 server=/kaimg.com/114.114.114.114
