accelerated-domains: add sailongmetal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72597,6 +72597,7 @@ server=/sail2world.com/114.114.114.114
 server=/saili.science/114.114.114.114
 server=/sailingyun.com/114.114.114.114
 server=/sailipaint.com/114.114.114.114
+server=/sailongmetal.com/114.114.114.114
 server=/sailungroup.com/114.114.114.114
 server=/sailuntire.com/114.114.114.114
 server=/sailway-china.com/114.114.114.114
