--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38702,6 +38702,7 @@ server=/gzhuake.cc/114.114.114.114
 server=/gzhuamei.net/114.114.114.114
 server=/gzhuayan.com/114.114.114.114
 server=/gzhuiwan.com/114.114.114.114
+server=/gzhwgg.com/114.114.114.114
 server=/gzhwsp.com/114.114.114.114
 server=/gzhx04.com/114.114.114.114
 server=/gzhx09.com/114.114.114.114
