--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38871,6 +38871,7 @@ server=/gzssnzx.com/114.114.114.114
 server=/gzssyyy.com/114.114.114.114
 server=/gzstarship.com/114.114.114.114
 server=/gzstv.com/114.114.114.114
+server=/gzstw.com/114.114.114.114
 server=/gzstyq.com/114.114.114.114
 server=/gzsuic.com/114.114.114.114
 server=/gzsums.net/114.114.114.114
