accelerated-domains: add aicoauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9933,6 +9933,7 @@ server=/aiclicash.com/114.114.114.114
 server=/aiclk.com/114.114.114.114
 server=/aicloud.com/114.114.114.114
 server=/aicn.me/114.114.114.114
+server=/aicoauto.com/114.114.114.114
 server=/aicode.cc/114.114.114.114
 server=/aicoinstorge.com/114.114.114.114
 server=/aiconn.com/114.114.114.114
