accelerated-domains: add dlw-lighting.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26699,6 +26699,7 @@ server=/dltobacco.com/114.114.114.114
 server=/dltsfh.com/114.114.114.114
 server=/dltubu.com/114.114.114.114
 server=/dlvalve.com/114.114.114.114
+server=/dlw-lighting.com/114.114.114.114
 server=/dlw360.com/114.114.114.114
 server=/dlw666.com/114.114.114.114
 server=/dlwanbao.com/114.114.114.114
