--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31531,6 +31531,7 @@ server=/finer2.com/114.114.114.114
 server=/finereport.com/114.114.114.114
 server=/finereporthelp.com/114.114.114.114
 server=/fineset.com/114.114.114.114
+server=/finetooling.com/114.114.114.114
 server=/finetopix.com/114.114.114.114
 server=/fineui.com/114.114.114.114
 server=/finewatchcare.com/114.114.114.114
