--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38661,6 +38661,7 @@ server=/gzfin.com/114.114.114.114
 server=/gzfirst.com/114.114.114.114
 server=/gzfjwzhs.com/114.114.114.114
 server=/gzfk01.com/114.114.114.114
+server=/gzfodak.com/114.114.114.114
 server=/gzfqyy.com/114.114.114.114
 server=/gzfrldz.com/114.114.114.114
 server=/gzfsnet.com/114.114.114.114
