--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49674,6 +49674,7 @@ server=/jinzhou315.com/114.114.114.114
 server=/jinzhoubank.com/114.114.114.114
 server=/jinzhouren.com/114.114.114.114
 server=/jinzhucaifu.com/114.114.114.114
+server=/jinzhuoqy.com/114.114.114.114
 server=/jinzjy.com/114.114.114.114
 server=/jinzunjy.com/114.114.114.114
 server=/jioluo.com/114.114.114.114
