--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59556,6 +59556,7 @@ server=/meijieyizhan.com/114.114.114.114
 server=/meijiezaixian.com/114.114.114.114
 server=/meijiezaixian.net/114.114.114.114
 server=/meijingjie.com/114.114.114.114
+server=/meijipower.com/114.114.114.114
 server=/meijiu.com/114.114.114.114
 server=/meijufans.com/114.114.114.114
 server=/meijuniao.net/114.114.114.114
