accelerated-domains: add youxixinzhi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97077,6 +97077,7 @@ server=/youxiula.com/114.114.114.114
 server=/youxiwangguo.com/114.114.114.114
 server=/youxiwugui.com/114.114.114.114
 server=/youxixf.com/114.114.114.114
+server=/youxixinzhi.com/114.114.114.114
 server=/youxixj.com/114.114.114.114
 server=/youxizhan.com/114.114.114.114
 server=/youxuan.com/114.114.114.114
