--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23008,6 +23008,7 @@ server=/cp127w.com/114.114.114.114
 server=/cp365.org/114.114.114.114
 server=/cpa51.com/114.114.114.114
 server=/cpaatheatres.com/114.114.114.114
+server=/cpaddress.com/114.114.114.114
 server=/cpajia.com/114.114.114.114
 server=/cpakg.com/114.114.114.114
 server=/cpass.com/114.114.114.114
