--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41504,6 +41504,7 @@ server=/higer.com/114.114.114.114
 server=/higeshi.com/114.114.114.114
 server=/higgmm.net/114.114.114.114
 server=/high-defense-163.com/114.114.114.114
+server=/high-genius.com/114.114.114.114
 server=/high20-playback.com/114.114.114.114
 server=/high21-playback.com/114.114.114.114
 server=/high22-playback.com/114.114.114.114
