accelerated-domains: add itav-gz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47374,6 +47374,7 @@ server=/itaokecms.com/114.114.114.114
 server=/itaored.com/114.114.114.114
 server=/itaotuo.com/114.114.114.114
 server=/itaoxiaoshuo.com/114.114.114.114
+server=/itav-gz.com/114.114.114.114
 server=/itavcn.com/114.114.114.114
 server=/itbaizhan.com/114.114.114.114
 server=/itbegin.com/114.114.114.114
