accelerated-domains: add xev-connectivity.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90421,6 +90421,7 @@ server=/xet.tech/114.114.114.114
 server=/xetimes.com/114.114.114.114
 server=/xetlk.com/114.114.114.114
 server=/xetslk.com/114.114.114.114
+server=/xev-connectivity.com/114.114.114.114
 server=/xevaix.com/114.114.114.114
 server=/xevd.co/114.114.114.114
 server=/xevddy.com/114.114.114.114
