--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9587,6 +9587,7 @@ server=/aexpec.com/114.114.114.114
 server=/af36.com/114.114.114.114
 server=/af360.com/114.114.114.114
 server=/af6s.icu/114.114.114.114
+server=/afaisouth.com/114.114.114.114
 server=/afang.com/114.114.114.114
 server=/afanti100.com/114.114.114.114
 server=/afarway.com/114.114.114.114
