accelerated-domains: add baojiegy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13368,6 +13368,7 @@ server=/baojia.com/114.114.114.114
 server=/baojiagaiye.com/114.114.114.114
 server=/baojian.com/114.114.114.114
 server=/baojiazhijia.com/114.114.114.114
+server=/baojiegy.com/114.114.114.114
 server=/baojijob.com/114.114.114.114
 server=/baojinews.com/114.114.114.114
 server=/baojinling.com/114.114.114.114
