accelerated-domains: add expozh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30198,6 +30198,7 @@ server=/expoooo.com/114.114.114.114
 server=/expoquan.com/114.114.114.114
 server=/expotu.com/114.114.114.114
 server=/expowindow.com/114.114.114.114
+server=/expozh.com/114.114.114.114
 server=/expressboo.com/114.114.114.114
 server=/expresscompanynetwork.com/114.114.114.114
 server=/expreview.com/114.114.114.114
