accelerated-domains: add gwetech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36330,6 +36330,7 @@ server=/gwblighting.com/114.114.114.114
 server=/gwdang.com/114.114.114.114
 server=/gweike.com/114.114.114.114
 server=/gwell.cc/114.114.114.114
+server=/gwetech.com/114.114.114.114
 server=/gwfsy.ro/114.114.114.114
 server=/gwgl168.com/114.114.114.114
 server=/gwi.cc/114.114.114.114
