--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38577,6 +38577,7 @@ server=/gz-spi.com/114.114.114.114
 server=/gz-tencentclb.cloud/114.114.114.114
 server=/gz-xinghe.com/114.114.114.114
 server=/gz-xinyu.com/114.114.114.114
+server=/gz-zhongshang.com/114.114.114.114
 server=/gz.com/114.114.114.114
 server=/gz007.net/114.114.114.114
 server=/gz0668.com/114.114.114.114
