accelerated-domains: add gzghyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38678,6 +38678,7 @@ server=/gzgayy.com/114.114.114.114
 server=/gzgcsmart.com/114.114.114.114
 server=/gzgdkq.com/114.114.114.114
 server=/gzgdwl.com/114.114.114.114
+server=/gzghyy.com/114.114.114.114
 server=/gzgjcm.com/114.114.114.114
 server=/gzglgcjt.com/114.114.114.114
 server=/gzgljx.com/114.114.114.114
