accelerated-domains: add gzytgf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38989,6 +38989,7 @@ server=/gzyqtlxs.com/114.114.114.114
 server=/gzyqwl.net/114.114.114.114
 server=/gzysbpay.com/114.114.114.114
 server=/gzysnkyy.com/114.114.114.114
+server=/gzytgf.com/114.114.114.114
 server=/gzyucai.com/114.114.114.114
 server=/gzyxls.com/114.114.114.114
 server=/gzyxtech.com/114.114.114.114
