--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43599,6 +43599,7 @@ server=/huaren-scm.com/114.114.114.114
 server=/huarenyingyu.com/114.114.114.114
 server=/huarenyizhan.com/114.114.114.114
 server=/huari.com/114.114.114.114
+server=/huaroem.com/114.114.114.114
 server=/huarongdao.com/114.114.114.114
 server=/huarongled.com/114.114.114.114
 server=/huaruicom.com/114.114.114.114
