--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91171,6 +91171,7 @@ server=/xiaoniuben.com/114.114.114.114
 server=/xiaoniuds.com/114.114.114.114
 server=/xiaoniuhululu.com/114.114.114.114
 server=/xiaopaitech.com/114.114.114.114
+server=/xiaopaotec.com/114.114.114.114
 server=/xiaopeiqing.com/114.114.114.114
 server=/xiaopeng.com/114.114.114.114
 server=/xiaophy.com/114.114.114.114
