--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93692,6 +93692,7 @@ server=/xuzhoudeyu.com/114.114.114.114
 server=/xuzhoufabu.com/114.114.114.114
 server=/xuzhoujob.com/114.114.114.114
 server=/xuzhoumuseum.com/114.114.114.114
+server=/xuzhounano.com/114.114.114.114
 server=/xuzhousports.com/114.114.114.114
 server=/xuzhouwater.com/114.114.114.114
 server=/xv5.com/114.114.114.114
