--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7609,6 +7609,7 @@ server=/86933.com/114.114.114.114
 server=/869d.com/114.114.114.114
 server=/869v.com/114.114.114.114
 server=/86amsdy.com/114.114.114.114
+server=/86bus.com/114.114.114.114
 server=/86clouds.com/114.114.114.114
 server=/86crk.com/114.114.114.114
 server=/86ditu.com/114.114.114.114
