--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20949,6 +20949,7 @@ server=/cietac-sc.org/114.114.114.114
 server=/cietac.org/114.114.114.114
 server=/cifalshanghai.org/114.114.114.114
 server=/cifco.net/114.114.114.114
+server=/ciff-gz.com/114.114.114.114
 server=/cifm.com/114.114.114.114
 server=/cifnews.com/114.114.114.114
 server=/cifoo.com/114.114.114.114
