accelerated-domains: add guojiexpress.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36146,6 +36146,7 @@ server=/guoji.pro/114.114.114.114
 server=/guojiang.tv/114.114.114.114
 server=/guojianglive.com/114.114.114.114
 server=/guojidaigou.com/114.114.114.114
+server=/guojiexpress.com/114.114.114.114
 server=/guojimami.com/114.114.114.114
 server=/guojing-tech.com/114.114.114.114
 server=/guojiseka.com/114.114.114.114
