--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39009,6 +39009,7 @@ server=/gzzhitu.com/114.114.114.114
 server=/gzzhixin.com/114.114.114.114
 server=/gzzhrong.com/114.114.114.114
 server=/gzziri.com/114.114.114.114
+server=/gzzjgf.com/114.114.114.114
 server=/gzzkjc.net/114.114.114.114
 server=/gzzkzj.com/114.114.114.114
 server=/gzzkzsw.com/114.114.114.114
