--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33481,6 +33481,7 @@ server=/gczyg.com/114.114.114.114
 server=/gd-chenxing.com/114.114.114.114
 server=/gd-hskj.com/114.114.114.114
 server=/gd-id.com/114.114.114.114
+server=/gd-jinzhanggui.com/114.114.114.114
 server=/gd-lekai.com/114.114.114.114
 server=/gd-linux.com/114.114.114.114
 server=/gd-linux.org/114.114.114.114
