accelerated-domains: add gzzliot.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39017,6 +39017,7 @@ server=/gzzkzsw.com/114.114.114.114
 server=/gzzldq.com/114.114.114.114
 server=/gzzlfw.com/114.114.114.114
 server=/gzzlgame.com/114.114.114.114
+server=/gzzliot.com/114.114.114.114
 server=/gzzmedu.com/114.114.114.114
 server=/gzzoc.com/114.114.114.114
 server=/gzzongsi.com/114.114.114.114
