--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38628,6 +38628,7 @@ server=/gzchangke.com/114.114.114.114
 server=/gzchangzhe.com/114.114.114.114
 server=/gzchenggeng.com/114.114.114.114
 server=/gzchj.net/114.114.114.114
+server=/gzchuanghe.com/114.114.114.114
 server=/gzchupai.com/114.114.114.114
 server=/gzci.net/114.114.114.114
 server=/gzcihui.com/114.114.114.114
