--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38767,6 +38767,7 @@ server=/gzjxchem.com/114.114.114.114
 server=/gzjykj.com/114.114.114.114
 server=/gzjyme.com/114.114.114.114
 server=/gzjyypt.com/114.114.114.114
+server=/gzjz-auto.com/114.114.114.114
 server=/gzjzc.com/114.114.114.114
 server=/gzkaiheng.com/114.114.114.114
 server=/gzkaiyue.com/114.114.114.114
