accelerated-domains: add gzwanzhou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38939,6 +38939,7 @@ server=/gzv6.com/114.114.114.114
 server=/gzw.net/114.114.114.114
 server=/gzwanbao.com/114.114.114.114
 server=/gzwangshang.com/114.114.114.114
+server=/gzwanzhou.com/114.114.114.114
 server=/gzwarriortech.com/114.114.114.114
 server=/gzwaterinvest.com/114.114.114.114
 server=/gzwatersupply.com/114.114.114.114
