accelerated-domains: add gdhchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33570,6 +33570,7 @@ server=/gdgzhengzhou.com/114.114.114.114
 server=/gdgzrb.com/114.114.114.114
 server=/gdhaoma.com/114.114.114.114
 server=/gdhbsh.com/114.114.114.114
+server=/gdhchina.com/114.114.114.114
 server=/gdhcsh.com/114.114.114.114
 server=/gdhdbxg.com/114.114.114.114
 server=/gdhfny.com/114.114.114.114
