--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69169,6 +69169,7 @@ server=/qiku.com/114.114.114.114
 server=/qikuaibao.com/114.114.114.114
 server=/qikucdn.com/114.114.114.114
 server=/qikula.com/114.114.114.114
+server=/qilaijian.com/114.114.114.114
 server=/qilang.net/114.114.114.114
 server=/qilanxiaozhu.co/114.114.114.114
 server=/qilanxiaozhu.net/114.114.114.114
