accelerated-domains: add whizen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87871,6 +87871,7 @@ server=/whitegem.net/114.114.114.114
 server=/whitemedia-china.com/114.114.114.114
 server=/whiterose-sy.com/114.114.114.114
 server=/whitjy.com/114.114.114.114
+server=/whizen.com/114.114.114.114
 server=/whjbh.com/114.114.114.114
 server=/whjclgs.com/114.114.114.114
 server=/whjcly.com/114.114.114.114
