--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38685,6 +38685,7 @@ server=/gzgayy.com/114.114.114.114
 server=/gzgcsmart.com/114.114.114.114
 server=/gzgdkq.com/114.114.114.114
 server=/gzgdwl.com/114.114.114.114
+server=/gzgema.com/114.114.114.114
 server=/gzghyy.com/114.114.114.114
 server=/gzgjcm.com/114.114.114.114
 server=/gzglgcjt.com/114.114.114.114
