--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38881,6 +38881,7 @@ server=/gzshyk.com/114.114.114.114
 server=/gzsj.live/114.114.114.114
 server=/gzsjjs.com/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
+server=/gzskysoil.com/114.114.114.114
 server=/gzslyy.com/114.114.114.114
 server=/gzspt.com/114.114.114.114
 server=/gzsq.com/114.114.114.114
