accelerated-domains: add cproton.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23070,6 +23070,7 @@ server=/cpppc.org/114.114.114.114
 server=/cpppf.org/114.114.114.114
 server=/cppszw.com/114.114.114.114
 server=/cpqrmyy.com/114.114.114.114
+server=/cproton.com/114.114.114.114
 server=/cps1688.com/114.114.114.114
 server=/cps800.com/114.114.114.114
 server=/cpsbeijing.org/114.114.114.114
