accelerated-domains: add dinsense.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26407,6 +26407,7 @@ server=/dingzhijl.com/114.114.114.114
 server=/diningcity.asia/114.114.114.114
 server=/dinju.com/114.114.114.114
 server=/dinnxinn.com/114.114.114.114
+server=/dinsense.com/114.114.114.114
 server=/dinshangpictures.com/114.114.114.114
 server=/dinyocasa.com/114.114.114.114
 server=/dinzd.com/114.114.114.114
