--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38813,6 +38813,7 @@ server=/gzminjia.com/114.114.114.114
 server=/gzmiyuan.com/114.114.114.114
 server=/gzmjhzs.com/114.114.114.114
 server=/gzmlfcyy.com/114.114.114.114
+server=/gzmould.com/114.114.114.114
 server=/gzmpc.com/114.114.114.114
 server=/gzmri.com/114.114.114.114
 server=/gzmstech.com/114.114.114.114
