accelerated-domains: add gzsuike.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38899,6 +38899,7 @@ server=/gzstv.com/114.114.114.114
 server=/gzstw.com/114.114.114.114
 server=/gzstyq.com/114.114.114.114
 server=/gzsuic.com/114.114.114.114
+server=/gzsuike.com/114.114.114.114
 server=/gzsums.net/114.114.114.114
 server=/gzsunny.com/114.114.114.114
 server=/gzsw168.com/114.114.114.114
