accelerated-domains: add pyeec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68285,6 +68285,7 @@ server=/pybrother.com/114.114.114.114
 server=/pychina.org/114.114.114.114
 server=/pydp888.com/114.114.114.114
 server=/pydvu.com/114.114.114.114
+server=/pyeec.com/114.114.114.114
 server=/pyer.net/114.114.114.114
 server=/pyer.site/114.114.114.114
 server=/pyhead.com/114.114.114.114
