--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99347,6 +99347,7 @@ server=/zesee.com/114.114.114.114
 server=/zesenjt.com/114.114.114.114
 server=/zeshengproject.com/114.114.114.114
 server=/zeshengshun.online/114.114.114.114
+server=/zeshengtecphar.com/114.114.114.114
 server=/zesidasi.com/114.114.114.114
 server=/zesmob.com/114.114.114.114
 server=/zeststore.com/114.114.114.114
