--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72012,6 +72012,7 @@ server=/rouxiutang.com/114.114.114.114
 server=/rouzao.com/114.114.114.114
 server=/rouzhitang.com/114.114.114.114
 server=/rovelskys.com/114.114.114.114
+server=/rowa.com/114.114.114.114
 server=/rowcan.com/114.114.114.114
 server=/roxinq.com/114.114.114.114
 server=/royalym.com/114.114.114.114
