accelerated-domains: add ezhousetech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30313,6 +30313,7 @@ server=/ezhijiantuoluo.com/114.114.114.114
 server=/ezhijiao.com/114.114.114.114
 server=/ezhiwan.com/114.114.114.114
 server=/ezhouln.com/114.114.114.114
+server=/ezhousetech.com/114.114.114.114
 server=/ezhu.com/114.114.114.114
 server=/ezhuchina.com/114.114.114.114
 server=/ezhun.com/114.114.114.114
