--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38782,6 +38782,7 @@ server=/gzkcsj.com/114.114.114.114
 server=/gzkeeyun.com/114.114.114.114
 server=/gzking.com/114.114.114.114
 server=/gzkmring.com/114.114.114.114
+server=/gzkofa.com/114.114.114.114
 server=/gzkuniu.com/114.114.114.114
 server=/gzkunmao.com/114.114.114.114
 server=/gzkydzyyy.com/114.114.114.114
