--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38877,6 +38877,7 @@ server=/gzschknyy.com/114.114.114.114
 server=/gzsdwrmyy.com/114.114.114.114
 server=/gzselon.com/114.114.114.114
 server=/gzsenzheng.com/114.114.114.114
+server=/gzsewage.com/114.114.114.114
 server=/gzsgczb.com/114.114.114.114
 server=/gzshaudio.com/114.114.114.114
 server=/gzshiran.com/114.114.114.114
