accelerated-domains: add cjzcb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21215,6 +21215,7 @@ server=/cjxz.com/114.114.114.114
 server=/cjycode.com/114.114.114.114
 server=/cjyun.org/114.114.114.114
 server=/cjyyw.com/114.114.114.114
+server=/cjzcb.com/114.114.114.114
 server=/cjzcgl.com/114.114.114.114
 server=/cjzkw.com/114.114.114.114
 server=/cjzsy.com/114.114.114.114
