accelerated-domains: add vefast-fa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85145,6 +85145,7 @@ server=/veevlink.com/114.114.114.114
 server=/veew-alb-cn1.com/114.114.114.114
 server=/veew-alb-cn2.com/114.114.114.114
 server=/veew-alb-ts.com/114.114.114.114
+server=/vefast-fa.com/114.114.114.114
 server=/vegalb.com/114.114.114.114
 server=/vegslb.com/114.114.114.114
 server=/vegtm.net/114.114.114.114
