accelerated-domains: add biorule.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14858,6 +14858,7 @@ server=/biominhai.com/114.114.114.114
 server=/bionav.cc/114.114.114.114
 server=/bioon.com/114.114.114.114
 server=/bioon.net/114.114.114.114
+server=/biorule.com/114.114.114.114
 server=/bioscienceres.com/114.114.114.114
 server=/bioshineking.com/114.114.114.114
 server=/biosmelt.com/114.114.114.114
