accelerated-domains: add china-mx.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19664,6 +19664,7 @@ server=/china-mcc.com/114.114.114.114
 server=/china-mile.com/114.114.114.114
 server=/china-moutai.com/114.114.114.114
 server=/china-mt.org/114.114.114.114
+server=/china-mx.net/114.114.114.114
 server=/china-nengyuan.com/114.114.114.114
 server=/china-nlp.com/114.114.114.114
 server=/china-nns.com/114.114.114.114
