accelerated-domains: add gzdaochen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38653,6 +38653,7 @@ server=/gzcycling.com/114.114.114.114
 server=/gzczjd.com/114.114.114.114
 server=/gzdai.com/114.114.114.114
 server=/gzdaily.com/114.114.114.114
+server=/gzdaochen.com/114.114.114.114
 server=/gzdata.net/114.114.114.114
 server=/gzdbx.com/114.114.114.114
 server=/gzdcsmt.com/114.114.114.114
