--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38703,6 +38703,7 @@ server=/gzgmjcx.com/114.114.114.114
 server=/gzgreatsun.com/114.114.114.114
 server=/gzguangjia.com/114.114.114.114
 server=/gzgx020.com/114.114.114.114
+server=/gzgycw.com/114.114.114.114
 server=/gzhaigu.com/114.114.114.114
 server=/gzhakj.com/114.114.114.114
 server=/gzhand.com/114.114.114.114
