accelerated-domains: add gzktm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38789,6 +38789,7 @@ server=/gzkeeyun.com/114.114.114.114
 server=/gzking.com/114.114.114.114
 server=/gzkmring.com/114.114.114.114
 server=/gzkofa.com/114.114.114.114
+server=/gzktm.com/114.114.114.114
 server=/gzkuniu.com/114.114.114.114
 server=/gzkunmao.com/114.114.114.114
 server=/gzkydzyyy.com/114.114.114.114
