--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39025,6 +39025,7 @@ server=/gzyyma.com/114.114.114.114
 server=/gzyz699.com/114.114.114.114
 server=/gzzarts.com/114.114.114.114
 server=/gzzc-logistics.com/114.114.114.114
+server=/gzzdgg.com/114.114.114.114
 server=/gzzdkg.com/114.114.114.114
 server=/gzzdqy.net/114.114.114.114
 server=/gzzfrl.com/114.114.114.114
