--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46662,6 +46662,7 @@ server=/infinitynewtab.com/114.114.114.114
 server=/infinitytab.com/114.114.114.114
 server=/info-insur.com/114.114.114.114
 server=/info-monitor.com/114.114.114.114
+server=/info-onesky.com/114.114.114.114
 server=/info.cc/114.114.114.114
 server=/info10.com/114.114.114.114
 server=/info110.com/114.114.114.114
