accelerated-domains: add xytfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94044,6 +94044,7 @@ server=/xysy.com/114.114.114.114
 server=/xysyzx.com/114.114.114.114
 server=/xyszxyy.com/114.114.114.114
 server=/xyt-tech.com/114.114.114.114
+server=/xytfy.com/114.114.114.114
 server=/xytiyu.com/114.114.114.114
 server=/xytjcpj.com/114.114.114.114
 server=/xytm.art/114.114.114.114
