accelerated-domains: add ycleaning.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94780,6 +94780,7 @@ server=/yckceo.vip/114.114.114.114
 server=/yckjonline.com/114.114.114.114
 server=/yckkdd.com/114.114.114.114
 server=/ycku.com/114.114.114.114
+server=/ycleaning.com/114.114.114.114
 server=/yclh6.com/114.114.114.114
 server=/ycloud.online/114.114.114.114
 server=/ycloudlb.com/114.114.114.114
