--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69521,6 +69521,7 @@ server=/qisool.com/114.114.114.114
 server=/qisuu.la/114.114.114.114
 server=/qisuya.com/114.114.114.114
 server=/qita.love/114.114.114.114
+server=/qitaifu.com/114.114.114.114
 server=/qitaijiuye.com/114.114.114.114
 server=/qiti88.com/114.114.114.114
 server=/qitian-tech.com/114.114.114.114
