--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72672,6 +72672,7 @@ server=/sairaicc.com/114.114.114.114
 server=/sairui020.com/114.114.114.114
 server=/saisaiwa.com/114.114.114.114
 server=/saisreetravels.com/114.114.114.114
+server=/saiterobot.com/114.114.114.114
 server=/saivsi.com/114.114.114.114
 server=/saiweidianqi.com/114.114.114.114
 server=/saiyou999.com/114.114.114.114
