accelerated-domains: add china-kingmold.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19651,6 +19651,7 @@ server=/china-kaoshi.com/114.114.114.114
 server=/china-key.com/114.114.114.114
 server=/china-kids-expo.com/114.114.114.114
 server=/china-kids-fair.com/114.114.114.114
+server=/china-kingmold.com/114.114.114.114
 server=/china-knobs.com/114.114.114.114
 server=/china-lantu.com/114.114.114.114
 server=/china-latv.com/114.114.114.114
