--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31292,6 +31292,7 @@ server=/fengousm.com/114.114.114.114
 server=/fengpengjun.com/114.114.114.114
 server=/fengpintech.com/114.114.114.114
 server=/fengread.com/114.114.114.114
+server=/fengse.com/114.114.114.114
 server=/fengshangweekly.com/114.114.114.114
 server=/fengshankeji.com/114.114.114.114
 server=/fengshi8888.com/114.114.114.114
