--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17967,6 +17967,7 @@ server=/ccnee.com/114.114.114.114
 server=/ccnew.com/114.114.114.114
 server=/ccngx.com/114.114.114.114
 server=/ccnovel.com/114.114.114.114
+server=/ccnovo.com/114.114.114.114
 server=/ccnphoto.com/114.114.114.114
 server=/ccnpic.com/114.114.114.114
 server=/ccnt.com/114.114.114.114
