accelerated-domains: add gzbycq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38632,6 +38632,7 @@ server=/gzbote.com/114.114.114.114
 server=/gzbt020.com/114.114.114.114
 server=/gzbus.com/114.114.114.114
 server=/gzbxyy120.com/114.114.114.114
+server=/gzbycq.com/114.114.114.114
 server=/gzbyyy.com/114.114.114.114
 server=/gzbzsport.com/114.114.114.114
 server=/gzcancer.com/114.114.114.114
