--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38708,6 +38708,7 @@ server=/gzgljx.com/114.114.114.114
 server=/gzgmjcx.com/114.114.114.114
 server=/gzgreatsun.com/114.114.114.114
 server=/gzguangjia.com/114.114.114.114
+server=/gzguidian.com/114.114.114.114
 server=/gzgx020.com/114.114.114.114
 server=/gzgycw.com/114.114.114.114
 server=/gzhaigu.com/114.114.114.114
