--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49964,6 +49964,7 @@ server=/jiweixin168.com/114.114.114.114
 server=/jiwu.com/114.114.114.114
 server=/jiwucdn.com/114.114.114.114
 server=/jiwudai.com/114.114.114.114
+server=/jixiang-tech.com/114.114.114.114
 server=/jixiang800.com/114.114.114.114
 server=/jixiangjili.com/114.114.114.114
 server=/jixiangyou.com/114.114.114.114
