--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52938,6 +52938,7 @@ server=/kimqi.net/114.114.114.114
 server=/kimsom.com/114.114.114.114
 server=/kimxz.com/114.114.114.114
 server=/kina.cc/114.114.114.114
+server=/kindechem.com/114.114.114.114
 server=/kindlelib.com/114.114.114.114
 server=/kindobest.com/114.114.114.114
 server=/king-capital.com/114.114.114.114
