--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78545,6 +78545,7 @@ server=/suibao-jiaozhu.com/114.114.114.114
 server=/suibao.com/114.114.114.114
 server=/suibianla.com/114.114.114.114
 server=/suibiji.com/114.114.114.114
+server=/suigo.net/114.114.114.114
 server=/suiji123.com/114.114.114.114
 server=/suijinetworks.com/114.114.114.114
 server=/suijunlaowu.com/114.114.114.114
