accelerated-domains: add zshcx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102279,6 +102279,7 @@ server=/zsh.com/114.114.114.114
 server=/zsh8.com/114.114.114.114
 server=/zshangtai.com/114.114.114.114
 server=/zshc12306.com/114.114.114.114
+server=/zshcx.com/114.114.114.114
 server=/zshgsoft.com/114.114.114.114
 server=/zshhjt.com/114.114.114.114
 server=/zshield.net/114.114.114.114
