--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102748,6 +102748,7 @@ server=/zxjkcyjt.com/114.114.114.114
 server=/zxjkj.com/114.114.114.114
 server=/zxjsq.net/114.114.114.114
 server=/zxjy.net/114.114.114.114
+server=/zxknow.com/114.114.114.114
 server=/zxkq022.com/114.114.114.114
 server=/zxky007.com/114.114.114.114
 server=/zxl.com/114.114.114.114
