--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58656,6 +58656,7 @@ server=/magicwatchface.com/114.114.114.114
 server=/magicwinmail.com/114.114.114.114
 server=/magma.ink/114.114.114.114
 server=/magook.com/114.114.114.114
+server=/magpiepharma.com/114.114.114.114
 server=/magtechjournal.com/114.114.114.114
 server=/maguang.net/114.114.114.114
 server=/magvision.com/114.114.114.114
