--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81509,6 +81509,7 @@ server=/tiangou.xyz/114.114.114.114
 server=/tianhai.info/114.114.114.114
 server=/tianhao.vip/114.114.114.114
 server=/tianhaohz.com/114.114.114.114
+server=/tianhebus.com/114.114.114.114
 server=/tianhejiayi.com/114.114.114.114
 server=/tianhelife.com/114.114.114.114
 server=/tianheplaza.com/114.114.114.114
