--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91933,6 +91933,7 @@ server=/xinnonggongshe.com/114.114.114.114
 server=/xinnuodazu.com/114.114.114.114
 server=/xinorngyk.com/114.114.114.114
 server=/xinouhk.com/114.114.114.114
+server=/xinoujixie.com/114.114.114.114
 server=/xinpa.com/114.114.114.114
 server=/xinpg.com/114.114.114.114
 server=/xinpianchang.com/114.114.114.114
