accelerated-domains: add gbasig.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33405,6 +33405,7 @@ server=/gb55009.com/114.114.114.114
 server=/gb5842.com/114.114.114.114
 server=/gbase8a.com/114.114.114.114
 server=/gbasebi.com/114.114.114.114
+server=/gbasig.com/114.114.114.114
 server=/gbcnvip15.com/114.114.114.114
 server=/gbdex.com/114.114.114.114
 server=/gbdz.net/114.114.114.114
