--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71861,6 +71861,7 @@ server=/robotphoenix.com/114.114.114.114
 server=/robotplaces.com/114.114.114.114
 server=/roboxx.ltd/114.114.114.114
 server=/roc-cnc.com/114.114.114.114
+server=/roca026.com/114.114.114.114
 server=/rocaircraft.com/114.114.114.114
 server=/rocar.net/114.114.114.114
 server=/rochat.tech/114.114.114.114
