--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79385,6 +79385,7 @@ server=/sypglass.com/114.114.114.114
 server=/sypole.com/114.114.114.114
 server=/sypost.com/114.114.114.114
 server=/sypvm.com/114.114.114.114
+server=/syq666.com/114.114.114.114
 server=/syr-sce.com/114.114.114.114
 server=/syrcb.net/114.114.114.114
 server=/syreads.com/114.114.114.114
