accelerated-domains: add gdtx56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33695,6 +33695,7 @@ server=/gdtongjiang.com/114.114.114.114
 server=/gdtravel.com/114.114.114.114
 server=/gdttc.com/114.114.114.114
 server=/gdttdj.com/114.114.114.114
+server=/gdtx56.com/114.114.114.114
 server=/gdtz888.com/114.114.114.114
 server=/gdu-tech.com/114.114.114.114
 server=/gduaee.com/114.114.114.114
