--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63051,6 +63051,7 @@ server=/newcger.com/114.114.114.114
 server=/newchainbase.com/114.114.114.114
 server=/newchieve.com/114.114.114.114
 server=/newchinalife.com/114.114.114.114
+server=/newcitygz.com/114.114.114.114
 server=/newclasses.org/114.114.114.114
 server=/newclouddenfender.com/114.114.114.114
 server=/newcoder.com/114.114.114.114
