accelerated-domains: add pc15.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66594,6 +66594,7 @@ server=/pc-daily.com/114.114.114.114
 server=/pc.wiki/114.114.114.114
 server=/pc028.com/114.114.114.114
 server=/pc120.com/114.114.114.114
+server=/pc15.net/114.114.114.114
 server=/pc18.net/114.114.114.114
 server=/pc186.com/114.114.114.114
 server=/pc34.com/114.114.114.114
