--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20848,6 +20848,7 @@ server=/chunyu.me/114.114.114.114
 server=/chunyu.mobi/114.114.114.114
 server=/chunyuqiufeng.com/114.114.114.114
 server=/chunyuyisheng.com/114.114.114.114
+server=/chuolitech.com/114.114.114.114
 server=/chupl.icu/114.114.114.114
 server=/chuqitc.com/114.114.114.114
 server=/chuquan.me/114.114.114.114
