accelerated-domains: add dahengkongjiao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24581,6 +24581,7 @@ server=/daheng-image.com/114.114.114.114
 server=/daheng-imaging.com/114.114.114.114
 server=/daheng-imavision.com/114.114.114.114
 server=/dahengit.com/114.114.114.114
+server=/dahengkongjiao.com/114.114.114.114
 server=/dahepiao.com/114.114.114.114
 server=/dahongba.net/114.114.114.114
 server=/dahongtec.com/114.114.114.114
