accelerated-domains: add gccgz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33446,6 +33446,7 @@ server=/gcademy.net/114.114.114.114
 server=/gcaih.com/114.114.114.114
 server=/gcbtgh26.xyz/114.114.114.114
 server=/gccdn.net/114.114.114.114
+server=/gccgz.com/114.114.114.114
 server=/gcchina.com/114.114.114.114
 server=/gccmgw.com/114.114.114.114
 server=/gccrcw.com/114.114.114.114
