--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38598,6 +38598,7 @@ server=/gz-notary.com/114.114.114.114
 server=/gz-shanguang.com/114.114.114.114
 server=/gz-spi.com/114.114.114.114
 server=/gz-tencentclb.cloud/114.114.114.114
+server=/gz-wx.com/114.114.114.114
 server=/gz-xinghe.com/114.114.114.114
 server=/gz-xinyu.com/114.114.114.114
 server=/gz-zhongshang.com/114.114.114.114
