accelerated-domains: add yingtianit.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95760,6 +95760,7 @@ server=/yingtaosiyue.com/114.114.114.114
 server=/yingtaoyun.com/114.114.114.114
 server=/yingteach.com/114.114.114.114
 server=/yingtexin.net/114.114.114.114
+server=/yingtianit.com/114.114.114.114
 server=/yingtianlight.com/114.114.114.114
 server=/yingtianwang.com/114.114.114.114
 server=/yinguobing.com/114.114.114.114
